--- a/PhaseB/MovieOn/src/main/webapp/view/home.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/home.view.client.html
@@ -66,7 +66,11 @@
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
         <a href="#!/userEdit">
-            Edit Users
+            Delete Users
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+        <a href="#!/userContact">
+            Contact Notes
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
     </div>
@@ -84,6 +88,7 @@
         <a ng-click="model.logout()">Logout</a>
     </div>
 </div>
+
 <div id="main">
     <div id="myCarousel" class="carousel slide" data-ride="carousel" data-wrap=true>
         <ol class="carousel-indicators">
