--- a/PhaseB/MovieOn/src/main/webapp/view/user-like.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/user-like.view.client.html
@@ -61,6 +61,14 @@
             Approve Users
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
+        <a href="#!/userEdit">
+            Delete Users
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+        <a href="#!/userContact">
+            Contact Notes
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
     </div>
     <div ng-show="model.user.type == 'Critic'">
         <a href="#!/movieReview">
@@ -76,6 +84,7 @@
         <a ng-click="model.logout()">Logout</a>
     </div>
 </div>
+
 <div class="container-fluid" id="main">
     <h5><strong>Likes</strong></h5>
     <div ng-show="model.error" class="alert alert-danger" role="alert">
