--- a/PhaseB/MovieOn/src/main/webapp/view/userEdit.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/userEdit.view.client.html
@@ -62,7 +62,11 @@
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
         <a href="#!/userEdit">
-            Edit Users
+            Delete Users
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+        <a href="#!/userContact">
+            Contact Notes
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
     </div>
@@ -80,6 +84,7 @@
         <a ng-click="model.logout()">Logout</a>
     </div>
 </div>
+
 
 <div class="container-fluid panel panel-default" id="main">
     <div ng-show="model.message" class="alert alert-info" role="alert">
