--- a/PhaseB/MovieOn/src/main/webapp/view/movie-buy.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/movie-buy.view.client.html
@@ -70,6 +70,20 @@
             Approve Users
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
+        <a href="#!/userEdit">
+            Delete Users
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+        <a href="#!/userContact">
+            Contact Notes
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+    </div>
+    <div ng-show="model.user.type == 'Critic'">
+        <a href="#!/movieReview">
+            Reviews
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
     </div>
     <div ng-show="!model.userId">
         <a href="#!/login">Login</a>
@@ -79,6 +93,7 @@
         <a ng-click="model.logout()">Logout</a>
     </div>
 </div>
+
 <div class="container-fluid" id="main">
     <h3 class="panel panel-default">Sellers</h3>
     <div class="list-group">
