--- a/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
@@ -63,7 +63,7 @@
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
         <a href="#!/userEdit">
-            Edit Users
+            Delete Users
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
         <a href="#!/userContact">
