--- a/PhaseB/MovieOn/src/main/webapp/view/search.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/search.view.client.html
@@ -65,6 +65,20 @@
             Approve Users
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
+        <a href="#!/userEdit">
+            Delete Users
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+        <a href="#!/userContact">
+            Contact Notes
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+    </div>
+    <div ng-show="model.user.type == 'Critic'">
+        <a href="#!/movieReview">
+            Reviews
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
     </div>
     <div ng-show="!model.userId">
         <a href="#!/login">Login</a>
@@ -74,6 +88,7 @@
         <a ng-click="model.logout()">Logout</a>
     </div>
 </div>
+
 
 <div class="container-fluid content" id="main">
     <form class="input-group" ng-submit="model.searchTitle(model.searchTerm)">
