--- a/PhaseB/MovieOn/src/main/webapp/view/userContact.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/userContact.view.client.html
@@ -62,7 +62,11 @@
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
         <a href="#!/userEdit">
-            Edit Users
+            Delete Users
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+        <a href="#!/userContact">
+            Contact Notes
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
     </div>
